Upgrade changes, adding suppression repo into makeFile & resolving errors due to version upgrading