@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>uk.gov.companieshouse</groupId>
 		<artifactId>companies-house-parent</artifactId>
-		<version>1.3.0</version>
+		<version>2.1.5</version>
 		<relativePath/>
 	</parent>
 
@@ -16,26 +16,26 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<spring-boot-dependencies.version>2.7.10</spring-boot-dependencies.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<spring-boot-dependencies.version>3.2.5</spring-boot-dependencies.version>
 		<start-class>uk.gov.companieshouse.itemgroupstatusupdater.ItemGroupStatusUpdaterApplication</start-class>
 
 		<!-- Docker -->
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 
-		<spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
-		<sonar-maven-plugin.version>3.4.0.905</sonar-maven-plugin.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+		<spring-boot-maven-plugin.version>3.2.5</spring-boot-maven-plugin.version>
+		<sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
+		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
 		<!-- Structured logging -->
-		<structured-logging.version>1.9.27</structured-logging.version>
-		<api-sdk-manager-java-library.version>1.0.12</api-sdk-manager-java-library.version>
+		<structured-logging.version>3.0.3</structured-logging.version>
+		<api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>
 		<system-lambda.version>1.2.1</system-lambda.version>
-		<spring-cloud-contract-wiremock.version>2.2.8.RELEASE</spring-cloud-contract-wiremock.version>
+		<spring-cloud-contract-wiremock.version>4.1.3</spring-cloud-contract-wiremock.version>
 
 		<test-containers.version>1.18.1</test-containers.version>
-		<kafka-models.version>1.0.39</kafka-models.version>
-		<ch-kafka.version>1.4.8</ch-kafka.version>
+		<kafka-models.version>3.0.7</kafka-models.version>
+		<ch-kafka.version>3.0.1</ch-kafka.version>
 		<handlebars.version>4.3.1</handlebars.version>
 		<skip.unit.tests>false</skip.unit.tests>
 		<skip.integration.tests>false</skip.integration.tests>
@@ -43,6 +43,14 @@
 			${project.build.directory}/site/jacoco-it/jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.jacoco.reports>${project.build.directory}/site</sonar.jacoco.reports>
+		<mokito-core.version>5.12.0</mokito-core.version>
+		<mokito-inline.version>5.2.0</mokito-inline.version>
+		<spring-kafka-test.version>3.2.0</spring-kafka-test.version>
+
+		<argLine>
+			--add-opens java.base/java.util=ALL-UNNAMED
+			--add-opens java.base/java.lang=ALL-UNNAMED
+		</argLine>
 	</properties>
 
 	<dependencyManagement>
@@ -110,11 +118,27 @@
 			<groupId>uk.gov.companieshouse</groupId>
 			<artifactId>kafka-models</artifactId>
 			<version>${kafka-models.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.jetty.http2</groupId>
+					<artifactId>http2-common</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>uk.gov.companieshouse</groupId>
 			<artifactId>ch-kafka</artifactId>
 			<version>${ch-kafka.version}</version>
+			<exclusions>
+			<exclusion>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-compress</artifactId>
+			</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Structured logging -->
@@ -141,6 +165,13 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
+			<version>${spring-kafka-test.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.pcollections</groupId>
+					<artifactId>pcollections</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -175,16 +206,19 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<version>${mokito-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mokito-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-inline</artifactId>
+			<version>${mokito-inline.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -328,6 +362,25 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<from>
+						<image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+					</from>
+					<to>
+						<image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/item-group-status-updater:latest</image>
+					</to>
+					<container>
+						<expandClasspathDependencies>true</expandClasspathDependencies>
+						<jvmFlags>
+							<jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+						</jvmFlags>
+					</container>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
